client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:kubectl get pods
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: navan2005/client
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
